# anomaly_detection_streaming

./: .gitignore  App.py  README.md  docker-compose.yml  dockerfile  pyproject.toml
docker/: dockerfile
src/: downloading-data-air.py  downloading-data-traffic.py  downloading_data_air.py  downloading_data_traffic.py  eda_spark.py  features_spark.py  fusion_data.py  ingest_spark.py  main.py  model.py  test_spark.py
