[project]
name = "anomaly_detection_streaming"
version = "0.1.0"
description = "Real-time anomaly detection in traffic and pollution data using Spark Structured Streaming"
authors = [
    {name = "Javier Osuna",email = "javiosuna01@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark (>=4.0.0,<5.0.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "polars (>=1.30.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false