[project]
name = "anomaly-detection-streaming"
version = "0.1.0"
description = "Real-time anomaly detection in traffic and pollution data using Spark Structured Streaming"
authors = [
    {name = "Javier Osuna Titos"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark (>=4.0.0,<5.0.0)",
    "mlflow (>=3.1.1,<4.0.0)",
    "polars (>=1.31.0,<2.0.0)",
    "streamlit (>=1.46.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
